Added getPerson function

--- a/MySite/index.html
+++ b/MySite/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Оптіма</title>
+    <script type="text/javascript" src="lesson2.js"></script>
   </head>
   <body>
     <p><h3>Наполегливо просимо!</h3> 
