--- a/MySite/index.html
+++ b/MySite/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Оптіма</title>
     <script type="text/javascript" src="lesson2.js"></script>
+    <link rel="stylesheet" type="text/css" href="lesson2.css">
   </head>
   <body>
     <p><h3>Наполегливо просимо!</h3> 
